--- a/K8S/commands-depl.yml
+++ b/K8S/commands-depl.yml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: platforms-depl
+  name: commands-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: platformservice
+      app: commandservice
   template:
     metadata:
       labels:
-        app: platformservice
+        app: commandservice
     spec:
       containers:
-        - name: platformservice
-          image: rohitv5/platformservice:latest
+        - name: commandservice
+          image: rohitv5/commandservice:latest
 ---
 apiVersion: v1
 kind: Service
 metadata: 
-  name: platforms-clusterip-srv
+  name: commands-clusterip-srv  # this will be used as a url http://commands-clusterip-srv
 spec:
   type: ClusterIP
   selector:
-    app: platformservice
+    app: commandservice
   ports:
-  - name: platformservice
+  - name: commandservice
     protocol: TCP
     port: 80
-    targetPort: 80  
+    targetPort: 80  #port 80 mapping from this service to this http://commands-clusterip-srv:80 
 
 
 # ---
