--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CommandService": "http://commands-clusterip-srv:80/"
+  "CommandService": "http://commands-clusterip-srv:80/",
+  "ConnectionStrings":{
+    "PlatformsConn":"Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=true;"
+  }
 }
