--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -8,5 +8,7 @@
   "CommandService": "http://commands-clusterip-srv:80/",
   "ConnectionStrings":{
     "PlatformsConn":"Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=true;"
-  }
+  },
+  "RabbitMQHost":"rabbitmq-clusterip-srv",
+  "RabbitMQPort":"5672"
 }
