:rocket: | grpc sync service protobuf

--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -6,9 +6,21 @@
     }
   },
   "CommandService": "http://commands-clusterip-srv:80/",
-  "ConnectionStrings":{
-    "PlatformsConn":"Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=true;"
+  "ConnectionStrings": {
+    "PlatformsConn": "Server=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=P@ssw0rd;TrustServerCertificate=true;"
   },
-  "RabbitMQHost":"rabbitmq-clusterip-srv",
-  "RabbitMQPort":"5672"
+  "RabbitMQHost": "rabbitmq-clusterip-srv",
+  "RabbitMQPort": "5672",
+  "Kestrel": {
+    "Endpoints": {
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://platforms-clusterip-srv:666"
+      },
+      "webApi":{
+        "Protocols": "Http1",
+        "Url": "http://platforms-clusterip-srv:80"
+      }
+    }
+  }
 }
