--- a/K8S/platforms-depl.yml
+++ b/K8S/platforms-depl.yml
@@ -28,7 +28,11 @@ spec:
   - name: platformservice
     protocol: TCP
     port: 80
-    targetPort: 80  
+    targetPort: 80
+  - name: platformgrpc
+    protocol: TCP
+    port: 666
+    targetPort: 666  
 
 
 # ---
